site/docs/v0.4.1/zh/components/toast.mdx
# Toast

Toast 在任务继续进行时提供短暂、非阻塞的结果反馈，并为重要后续操作保留可访问路径。

<Preview class="max-w-md">
<div class="grid w-full gap-3" data-toast-primary-demo="zh">
  <p class="text-sm text-muted-foreground" data-toast-status aria-live="polite">尚未显示提示</p>
  <div id="toaster-zh" class="toaster" data-toast-toaster></div>
  <button
    type="button"
    class="btn"
    data-variant="outline"
    data-toast-trigger
    data-preview-onclick
    onclick="const demo = this.closest('[data-toast-primary-demo]'); const toaster = demo.querySelector('[data-toast-toaster]'); const status = demo.querySelector('[data-toast-status]'); toaster.toast({ category: 'success', title: '操作成功', description: '更改已保存，可以继续当前任务。', duration: -1, cancel: { label: '关闭' } }); status.textContent = '成功提示已显示';"
  >显示成功提示</button>
</div>
</Preview>

## 用法

<Callout title="支持模板宏" icon="code" action={{ label: "查看模板", href: "/templates#toast" }}>
该组件为 Jinja 和 Nunjucks 提供了 `toaster()` 和 `toast()` 宏。
</Callout>

<Steps>
  <Step title="引入 CSS">

导入 Tailwind 和一个完整的 A3S UI 样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

或者只导入基本CSS、Toast组件CSS和一个样式包。

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/toast.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="引入 JavaScript">

复制或提供完整的 A3S UI JavaScript 包。

```html
<script src="/assets/js/all.min.js" defer></script>
```

或者复制或提供A3S UI运行时和Toast脚本。

```html
<script src="/assets/js/runtime.min.js" defer></script>
<script src="/assets/js/toast.min.js" defer></script>
```

使用CDN或批量程序导入？请参见[安装页](/installation)。

  </Step>
  <Step title="添加 Toast 容器">

在页面正文末尾附近添加 Toast 容器：

```html
<div id="toaster" class="toaster"></div>
```

在容器上设置 `data-align="start"`、`data-align="center"` 或 `data-align="end"` 以更改位置。

  </Step>
  <Step title="添加 Toast">

将服务器渲染的 Toast 标记放入容器，或使用 `toaster.toast(config)` 从 JavaScript 创建标记。

```html
<div id="toaster" class="toaster">
  <div class="toast" role="status" aria-atomic="true" aria-hidden="false" data-category="success">
    <div class="toast-content"><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10" /><path d="m9 12 2 2 4-4" /></svg>
      <section>
        <h2>操作成功</h2>
        <p>更改已保存，可以继续当前任务。</p>
      </section>
      <footer>
        <button type="button" class="btn" data-toast-action>关闭</button>
      </footer>
    </div>
  </div>
</div>
```

```html
<button
  class="btn" data-variant="outline"
  onclick="document.getElementById('toaster').toast({
    category: 'success',
    title: '操作成功',
    description: '更改已保存，可以继续当前任务。',
    cancel: {
      label: '关闭'
    }
  })">显示成功提示</button>
```

  </Step>
</Steps>

### HTML 结构

<dl>
  <dt><code>&lt;div id="toaster" class="toaster"&gt;</code></dt>
  <dd>Toast container. Optional <code>data-align</code> values are <code>start</code>, <code>center</code>, and <code>end</code>.</dd>
  <dt><code>&lt;div class="toast"&gt;</code></dt>
  <dd>
    Toast item. Use <code>data-category="success|info|warning|error"</code> for category styling and <code>data-duration</code> to override the timeout in milliseconds. Use <code>data-duration="-1"</code> to keep it open.
    <dl>
      <dt><code>&lt;div class="toast-content"&gt;</code></dt>
      <dd>
        Content wrapper.
        <dl>
          <dt><code>&lt;svg aria-hidden="true"&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
          <dd>Icon.</dd>
          <dt><code>&lt;section&gt;</code></dt>
          <dd>
            Message region.
            <dl>
              <dt><code>&lt;h2&gt;</code></dt>
              <dd>Title.</dd>
              <dt><code>&lt;p&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
              <dd>Description.</dd>
            </dl>
          </dd>
          <dt><code>&lt;footer&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
          <dd>Action buttons or links. Clicking a footer button or link closes the toast.</dd>
        </dl>
      </dd>
    </dl>
  </dd>
</dl>

### JavaScript API

| 应用程序编程接口 | 类型 | 描述 |
| --- | --- | --- |
| `toaster.toast(config)` | Method | Creates a toast from a config object and returns the inserted `.toast` element. [See "Config object" below](#config-object). |
| `toaster.closeAll()` | 方法 | 关闭烤面包机内的每个Toast。 |
| `toast.close()` | 方法 | 关闭一个已初始化的 toast 元素。 |

### Config 对象

<dl>
  <dt><code>duration</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>Timeout in milliseconds. Defaults to <code>3000</code>, or <code>5000</code> for error toasts. Use <code>-1</code> to keep it open.</dd>
  <dt><code>category</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>Category of the toast, either <code>success</code>, <code>info</code>, <code>warning</code>, or <code>error</code>.</dd>
  <dt><code>title</code></dt>
  <dd>Toast 标题。内容以纯文本渲染，不会解析为 HTML。</dd>
  <dt><code>description</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>Toast 描述。内容以纯文本渲染，不会解析为 HTML。</dd>
  <dt><code>action</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>主要操作。支持 <code>label</code>、可选的 <code>href</code>，以及可选的 <code>onClick(event)</code> 回调。</dd>
  <dt><code>cancel</code> <span class="badge" data-variant="secondary">Optional</span></dt>
  <dd>次要操作。支持 <code>label</code> 和可选的 <code>onClick(event)</code> 回调。</dd>
</dl>

## React

```tsx
import { Toast, useToast } from "@a3s-lab/ui/react";

export function Example() {
  const control = useToast();
  return (
    <Toast
      ref={control.ref}
      aria-atomic="true"
      aria-hidden="false"
      data-category="success"
    >
      <div className="toast-content">
        <svg
          aria-hidden="true"
          xmlns="http://www.w3.org/2000/svg"
          width="24"
          height="24"
          viewBox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          strokeWidth="2"
          strokeLinecap="round"
          strokeLinejoin="round"
        >
          <circle cx="12" cy="12" r="10"></circle>
          <path d="m9 12 2 2 4-4"></path>
        </svg>
        <section>
          <h2>操作成功</h2>
          <p>更改已保存，可以继续当前任务。</p>
        </section>
        <footer>
          <button type="button" className="btn" data-toast-action="">
            关闭
          </button>
        </footer>
      </div>
    </Toast>
  );
}
```

`useToast` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。

## Vue

```vue
<script setup lang="ts">
import { Toast, useToast } from "@a3s-lab/ui/vue";

const control = useToast();
const componentRef = control.componentRef;
</script>

<template>
  <Toast
    ref="componentRef"
    aria-atomic="true"
    aria-hidden="false"
    data-category="success"
  >
    <div class="toast-content">
      <svg
        aria-hidden="true"
        xmlns="http://www.w3.org/2000/svg"
        width="24"
        height="24"
        viewBox="0 0 24 24"
        fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
      >
        <circle cx="12" cy="12" r="10"></circle>
        <path d="m9 12 2 2 4-4"></path>
      </svg>
      <section>
        <h2>操作成功</h2>
        <p>更改已保存，可以继续当前任务。</p>
      </section>
      <footer>
        <button type="button" class="btn" data-toast-action="">关闭</button>
      </footer>
    </div>
  </Toast>
</template>
```

`useToast` 订阅清单中声明的 DOM 事件，并且只调用清单中公开的方法。适配器不创建另一套框架专属状态。
